test/asm/bank.err
error: bank.asm(13) -> bank.asm::def_sect(8):
    Expected constant expression: Section "ROMX_ok1"'s bank is not known
error: bank.asm(13) -> bank.asm::def_sect(8):
    Expected constant expression: "Label_u3"'s bank is not known
error: bank.asm(15) -> bank.asm::def_sect(8):
    Expected constant expression: Section "ROMX_bad"'s bank is not known
error: bank.asm(15) -> bank.asm::def_sect(8):
    Expected constant expression: "Label_u5"'s bank is not known
error: bank.asm(17) -> bank.asm::def_sect(8):
    Expected constant expression: Section "VRAM_bad"'s bank is not known
error: bank.asm(17) -> bank.asm::def_sect(8):
    Expected constant expression: "Label_u7"'s bank is not known
error: bank.asm(19) -> bank.asm::def_sect(8):
    Expected constant expression: Section "SRAM_bad"'s bank is not known
error: bank.asm(19) -> bank.asm::def_sect(8):
    Expected constant expression: "Label_u9"'s bank is not known
error: bank.asm(22) -> bank.asm::def_sect(8):
    Expected constant expression: Section "WRAMX_bad"'s bank is not known
error: bank.asm(22) -> bank.asm::def_sect(8):
    Expected constant expression: "Label_u12"'s bank is not known
error: bank.asm(26):
    BANK argument must be a label
Assembly aborted with 11 errors!
